@@ -174,7 +174,7 @@ public class SundaeSwapV3Test {
         // Find PlutusData fields
         List<String> plutusDataFields = allGeneratedSources.lines()
                 .filter(line -> line.trim().matches("private\\s+PlutusData\\s+\\w+;"))
-                .collect(Collectors.toList());
+                .toList();
 
         // Filter out legitimate PlutusData fields:
         // - extension/extensions: arbitrary extensibility data per protocol design
@@ -184,7 +184,7 @@ public class SundaeSwapV3Test {
                 .filter(line -> !line.contains("extensions")
                         && !line.contains("extension")
                         && !line.contains(" data;"))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!illegitimateFields.isEmpty()) {
             System.out.println("\n=== Found ILLEGITIMATE PlutusData fields (should be typed) ===");
